tests/policy/fixtures/serviceaccount-token.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: serviceaccount-token
automountServiceAccountToken: true
